# web_scrape_ai

./: .dockerignore  Dockerfile  Procfile  fly.toml  heroku.yml  main.py  pyproject.toml  requirements.txt
