[tool.poetry]
name = "web-scrape-api"
version = "0.1.0"
description = ""
authors = ["zjandali <yzjandali@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
scrapegraphai = "^1.33.3"
playwright = "^1.49.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
